EscortAdventure: implemented InitializeUser. TerminalGrid: Fixed logic, now displays table correctly.